# r3host

./: .gitignore  README.md  pyproject.toml  setup.py
d34dnet/: __init__.py
d34dnet/client/: __init__.py
d34dnet/inet/: __init__.py  base_client.py  base_server.py
d34dnet/inet/TCP/: __init__.py  client.py  server.py
d34dnet/inet/UDP/: __init__.py  client.py  server.py
examples/: echo_server.py
examples/client/: standalone.py
examples/server/: echo_server.py  standalone.py
netbucket/: NBclient.py  NBserver.py  __init__.py
netbucket/server/: __init__.py
r3host/: __init__.py
r3host/inet/: __init__.py
r3host/inet/TCP/: __init__.py  client.py  server.py
r3host/inet/UDP/: __init__.py  client.py  server.py
