[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d34dnet"
version = "2025.1.0"
authors = [
  { name="Izaiyah Stokes", email="d34d.dev@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"
description = "event based network programming"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/d34d0s/d34dnet"
"Suggestions and bugs" = "https://github.com/d34d0s/d34dnet/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "/venv",
  "/__pycache__",
]