[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r3host"
version = "2025.0.1"
authors = [
  { name="Izaiyah Stokes", email="d34d0s.dev@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"
description = "event driven network programming"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/r3shape/r3host"
"Suggestions and bugs" = "https://github.com/r3shape/r3host/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.git",
  "/venv",
  "/__pycache__",
]